groupChat api changes moved to dev